<resources>
    <string name="app_name">SOS</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="preference_notification_category">Notification Preferences</string>
    <string name="preference_emergency_category">Emergency Preferences</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="checkbox_sound">Sound</string>
    <string name="checkbox_LED">LED</string>
    <string name="checkbox_SOS">SOS</string>
    <string name="checkbox_SMS">Emergency Contact</string>
    <string name="checkbox_Blood">Blood Donation</string>
    <string name="blood_details">Opt-in for Blood Donation</string>
    <string name="checkbox_health_tips">Daily Health Tips</string>
    <string name="sos_detail">Persistent notification for emergencies</string>
    <string name="sms_detail">Notify emergency contact via SMS</string>
    <string name="sos_notification_detail">Tap here in case of an emergency</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_detail">Add a snooze action to the notification</string>
    <string name="snooze_length">Snooze length</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_detail">Add a \"Mark as done\" action to the notification</string>
    <string name="nagging_reminder">Nagging reminder</string>
    <string name="nagging_detail">Continuously notify you of the current notification until it is dismissed</string>
    <string name="nagging_interval">Nagging interval</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="action_show_now">Show now</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_share">Share</string>
    <string name="delete_confirmation">Are you sure you want to delete this notification?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="medication_name">Medication Name</string>
    <string name="save_menu">Save</string>
    <string name="time_now">Now</string>
    <string name="date_today">Today</string>
    <string name="times_shown">Shown %1$d out of %2$d times</string>
    <string name="times_shown_edit">Shown %1$d out of</string>
    <string name="forever">Forever</string>
    <string name="repeat_daily">Every Day</string>
    <string name="times">times</string>
    <string name="repeat_notification">Number of times to repeat: </string>
    <string name="content_hint">Add medication description</string>
    <string name="dosage_hint">Dosage</string>
    <string name="dosage_error">Enter the Dosage</string>
    <string name="dosage_show">Take %1$.2f</string>
    <string name="quantity_hint">Amount of meds you have</string>
    <string name="quantity_error">Enter the amount of meds you have</string>
    <string name="quantity_show">%1$.0f left</string>
    <string name="select_icon">Select an icon</string>
    <string name="default_icon">Icon</string>
    <string name="custom_icon">Custom icon</string>
    <string name="select_colour">Select a colour</string>
    <string name="default_colour">Colour</string>
    <string name="repeats_on">Repeats on:</string>
    <string name="repeat_every">Repeat every</string>
    <string name="repeats_every">Repeats every: %1$d %2$s</string>
    <string name="no_active">No active medications</string>
    <string name="no_inactive">No inventory</string>
    <string name="toast_past_date">Cannot set initial date in the past</string>
    <string name="toast_higher_number">Repeat number must be higher</string>
    <string name="toast_title_empty">Title cannot be empty</string>
    <string name="toast_mark_as_done">Marked next reminder as done</string>
    <string name="add_medication">Add medication</string>
    <string name="libraries">Libraries</string>
    <string name="rate_app">Rate app</string>
    <string name="contact">Contact</string>
    <string name="version">Version</string>
    <string name="thanks_to">Thanks to</string>
    <string name="translator">Translator</string>
    <string name="send_email">Send email</string>
    <string-array name="repeat_array">
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
        <item>Specific days of the week</item>
        <item>Advanced</item>
    </string-array>
    <string name="running_low">Running low\?</string>
    <string name="your_name">Your Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="allergies">Allergies / Conditions</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="contact_no">Contact No</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="pick_contact">Pick Emergency Contact</string>
    <string name="send_sos">Send SOS</string>
    <string name="weight">Weight in kilos</string>
    <string name="height">Height in cm</string>
    <string name="age">Age in years</string>
    <string-array name="blood_groups">
        <item>A Negative (A −ve)</item>
        <item>A Positive (A +ve)</item>
        <item>AB Negative (AB −ve)</item>
        <item>AB Positive (AB +ve)</item>
        <item>B Negative (B −ve)</item>
        <item>B Positive (B +ve)</item>
        <item>O Negative (O −ve)</item>
        <item>O Positive (O +ve)</item>
    </string-array>
    <string-array name="blood_groups_alias">
        <item>A_N</item>
        <item>A_P</item>
        <item>AB_N</item>
        <item>AB_P</item>
        <item>B_N</item>
        <item>B_P</item>
        <item>O_N</item>
        <item>O_P</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="activity_factor">
        <item>Sedentary</item>
        <item>Lightly active</item>
        <item>Moderately active</item>
        <item>Very active</item>
        <item>Extra active</item>
    </string-array>
    <string name="gain_weight">One pound of body weight is roughly equivalent to 3500 calories,
        so eating an extra 500 calories per day will cause you to gain one pound a week.</string>
    <string-array name="tips">
        <item>Crossing your arms behind your back, and stretch your shoulders and chest while seated helps yout posture.</item>
        <item>Eat breakfast every day. People who eat breakfast are less likely to overeat later in the day. Breakfast also gives you energy and helps you think and learn.</item>
        <item>Use fats and oils sparingly. Olive, canola, and peanut oils, avocados, nuts and nut butters,olives, and fish provide heart-healthy fat as well as vitamins and minerals.</item>
        <item>Eat six meals a day instead of heavy three meals.</item>
        <item>Drink 10 glasses of water everyday. Its especially important to stay well hydrated when following a comprehensive training, nutrition, and supplementation program.</item>
        <item>Don’t take more than one all-purpose multivitamin daily.</item>
        <item>Never cut any food group out of your diet including carbohydrates.</item>
        <item>Take a deep belly breath for three to five minutes twice a day.</item>
        <item>Have a greater variety of food. Variety means no excess of anything and more nutrients. Eat three different foods at every meal.</item>
        <item>Learn to cook and gain control of what goes into your meals</item>
        <item>Eat calcium-rich foods like milk, cheese and green leafy vegetables.</item>
        <item>Don’t sit for a prolonged time. Stand up and stretch.</item>
        <item>Honey helps build up your immunity system.</item>
    </string-array>
    <string name="title_activity_hello">Hello.</string>
    <string name="helloactivity_headline">Hello.</string>
    <string name="helloactivity_terms">Terms of Use</string>
    <string name="helloactivity_subhead">We just need a few quick things before getting you started.</string>
    <string name="helloactivity_name">Name</string>
    <string name="helloactivity_age_invalid">Please enter a valid age.</string>
    <string name="helloactivity_details_invalid">Please enter all details.</string>
    <string name="helloactivity_gender">Gender</string>
    <string name="helloactivity_spinner_blood_group">Bloud Group</string>
    <string name="helloactivity_share_data">Share anonymous data for research.</string>
    <string name="helloactivity_hint_settings">You can change these in settings later.</string>
    <string name="helloactivity_textview_tos">By using SOS, you are agreeing to the</string>
    <string name="helloactivity_button_next">NEXT</string>
    <string name="helloactivity_button_start">GET STARTED</string>
    <string name="fab_ambulance">Ambulance</string>
    <string name="fab_police">Police</string>
    <string name="fab_fire">Fire</string>
    <string name="fab_blood">Blood</string>
    <string name="fa1">The universal sign for choking is hands clutched to the throat. To help a choking victim, perform abdominal thrusts: stand behind the person with your arms around his or her waist, make a fist with one hand, grasp the fist with the other hand and press hard into the abdomen with a quick, upward thrust. If you are by yourself and choking, call 911 immediately, then proceed with abdominal thrusts: place your fist just above your belly button, grasp your fist with your other hand and bend over a hard surface, like a countertop, and shove your fist in and up.</string>
    <string name="fa2">After you wash your hands, stop any bleeding by applying gentle pressure using a sterile bandage or clean cloth. Use clean water to rinse the wound. You can use soap and a washcloth to clean the area around the wound, but try to keep soap from direct contact with wound (it can cause irritation). If the wound is dirty despite the rinsing, you can use tweezers cleaned with alcohol to remove particles that are left—but if you can’t get the wound clean, seek professional medical care. There is no need to use hydrogen peroxide or iodine-containing cleansers on the wound; these can irritate the tissue. Apply a thin layer of an antibiotic ointment to help keep the wound moist—it won’t make the wound heal faster, but can help keep the area clear of infection. You can finish off dressing the wound with a bandage, which should be changed at least once or twice a day, or anytime the dressing gets dirty.</string>
    <string name="activity_backup_drive_dialog_restore_title">Revert to previous version</string>
    <string name="activity_backup_drive_dialog_restore_desc">Restoring the backup will overwrite all the existing data with the backup.</string>
    <string name="activity_backup_drive_dialog_restore_details">Backup details</string>
    <string name="activity_backup_drive_dialog_restore_button_cancel">Cancel</string>
    <string name="activity_backup_drive_dialog_restore_button_restore">Restore backup</string>
</resources>