<?xml version="1.0" encoding="utf-8"?><!--
  ~ SOS
  ~ Copyright (C) 2016  zDuo (Adithya J, Vazbloke)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_backup_drive_dialog_restore_title"
        android:textColor="@color/glucosio_text_dark"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_backup_drive_dialog_restore_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/activity_backup_drive_dialog_restore_details"
        android:textAllCaps="true"
        android:textColor="@color/glucosio_text_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_backup_restore_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="22/12/1997" />

    <TextView
        android:id="@+id/dialog_backup_restore_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="1.2MB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingBottom="16dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_backup_restore_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/activity_backup_drive_dialog_restore_button_cancel"
            android:textColor="@color/glucosio_pink"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_backup_restore_button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/activity_backup_drive_dialog_restore_button_restore"
            android:textColor="@color/glucosio_pink"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>